# Resume-Screening-System

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Part-1/: 1_LLM_Call.ipynb  2_Messages.ipynb  3_Structured_Outputs.ipynb
Part-2/: 1_first_chain.ipynb  2_Chain_with_CustomRunnable.ipynb  3_Parallel_Chains.ipynb  4_Conditional_Chain.ipynb
Part-3/: 1_ReAct_Agent_Intro.ipynb  2_ReAct_DB_Agent.ipynb  init_db.py
Resume-JD Matcher/: Agent1.ipynb  agent_call.py  agents_nb.ipynb  app.py  graph.py  main_agent_call.py
Resume-JD Matcher/Agent1/: agent1.py  agent_call.py  models.py  prompts.py
Resume-JD Matcher/agents/: ats_agent_3.py  coach_agent_4.py  matcher_agent_2.py  parser_agent_1.py
Resume-JD Matcher/core/: models.py  prompts.py  utils.py
