[project]
name = "langchain-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ddgs>=9.8.0",
    "duckduckgo-search>=8.1.1",
    "greenlet<3.2.5",
    "ipykernel>=6.31.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.83",
    "langchain-openai>=0.3.35",
    "load-dotenv>=0.1.0",
    "openai>=2.21.0",
    "wikipedia>=1.4.0",
]
